--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,8 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: TEMDF
-  password: TEMDF
+  username: root
+  password: root
   socket: /var/run/mysqld/mysqld.sock
 
 development:
