--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: ruby
 
+before_script:
+- cp config/database.yml.travis config/database.yml
+- mysql -e "create database IF NOT EXISTS TEMDF_development;" -uroot
+- export MAILGUN_API_KEY="secret"
+- rake db:migrate RAILS_ENV=test
+
+script: 
+  - rake test
+
 rvm:
 - 2.2.0
 
