--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 
 before_script:
 - cp config/database.yml.travis config/database.yml
-- mysql -e "create database IF NOT EXISTS TEMDF_development;" -uroot
+- mysql -e "create database IF NOT EXISTS TEMDF_test;" -uroot
 - export MAILGUN_API_KEY="secret"
 - rake db:migrate RAILS_ENV=test
 
