--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,10 @@ development:
   <<: *default
   database: TEMDF_development
 
+production:
+  <<: *default
+  database: TEMDF_production
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
